# makdoudN.github.io

./: 404.html  config.yml  hugo.toml  index.css  index.html  index.xml  justfile  sitemap.xml
archive/: ordinal-regression.md
content/: my-new-page.md
content/blog/: my-new-post.md
content/posts/: Merchants-of-complexity.md  TIL-Full-Outer-Join.md  bayesian-modeling-and-typicality.md  bayesian-ordinal-regression.md  discomfort.md  first-post.md  flux-controlnet-and-lora-from-scratch.md  geometry-of-differential.md  llm-conventional-commit.md  lora.md  the-challenge-of-focus.md  trueskill.md
css/: main.css.map
g-xxxxxxxxx/: index.html  index.xml
js/: list_posts.js
layouts/partials/: math.html
notebooks/: elo.ipynb  llm-for-commit.ipynb  ordinal-regression.ipynb  pyproject.toml  utils_1.ipynb
notebooks/Information-Gain/: 00-Introduction.ipynb
notebooks/Langevin Algorithm/: 001.ipynb
notebooks/custom-loss-with-lightgbm/: example.ipynb  introduction.ipynb
notebooks/llm/: llm_commit.py
notebooks/lora/: lora.ipynb
notebooks/ordinal-clf-metric/: 00-QWK.ipynb
notebooks/ordinal-regression/: ntb.ipynb
notebooks/ranking-elo/: 00-data.ipynb  01-build-from-intuition.ipynb  01-elo-on-synthetic-data.ipynb  02-elo-synthetic.ipynb  02.ipynb  atp_matches_2020_2024_preprocessed.csv  elo.ipynb
post/: 000-this-is-a-test.md  002-Adaptive-Spaced-Repetition.md
post-formatted/: 001-MineRL2021-Introduction-and-Motivation.md.html
posts/: index.html  index.xml
public/: 404.html  index.html  index.xml  sitemap.xml
tags/: index.html  index.xml
(+54 files in other folders)
